--- a/sa_portal_rh/src/index.html
+++ b/sa_portal_rh/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- index.html -->
+  <script src="https://kit.fontawesome.com/b28c01dff0.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <app-root></app-root>
